...
      </View>

      <View style={$.buttonWrapper}>
        <Button
          onPress={handleSubmit(onSignIn)}
          size="lg"
          testID="sign-in-button"
          title={t("sign_in")}
          variant="primary"
        />
      </View>
    </>
  );
...
